--- a/Acfun/Acfun/Classes/HomePage/View/HomeSectionCell.xib
+++ b/Acfun/Acfun/Classes/HomePage/View/HomeSectionCell.xib
@@ -8,11 +8,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="SectionCell" rowHeight="228" id="KGk-i7-Jjw" customClass="HomeSectionCell">
-            <rect key="frame" x="0.0" y="0.0" width="326" height="228"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="SectionCell" rowHeight="376" id="KGk-i7-Jjw" customClass="HomeSectionCell">
+            <rect key="frame" x="0.0" y="0.0" width="310" height="376"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="326" height="227.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="310" height="375.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="2" translatesAutoresizingMaskIntoConstraints="NO" id="Jx7-t0-Uzx">
@@ -23,11 +23,11 @@
                         </constraints>
                     </imageView>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FdT-fK-MSw" customClass="ACHomeCollectionView">
-                        <rect key="frame" x="18" y="60" width="290" height="137.5"/>
+                        <rect key="frame" x="18" y="60" width="274" height="285.5"/>
                         <color key="backgroundColor" red="0.40000000600000002" green="0.40000000600000002" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zZQ-8F-Z4y">
-                        <rect key="frame" x="106" y="199.5" width="114" height="18"/>
+                        <rect key="frame" x="98" y="347.5" width="114" height="18"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <inset key="contentEdgeInsets" minX="20" minY="0.0" maxX="20" maxY="0.0"/>
                         <inset key="titleEdgeInsets" minX="-54" minY="0.0" maxX="0.0" maxY="0.0"/>
@@ -49,7 +49,12 @@
                     <constraint firstItem="zZQ-8F-Z4y" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="v30-m5-MUD"/>
                 </constraints>
             </tableViewCellContentView>
-            <point key="canvasLocation" x="237" y="146"/>
+            <connections>
+                <outlet property="collectionView" destination="FdT-fK-MSw" id="bZU-7D-V5D"/>
+                <outlet property="iconImageView" destination="Jx7-t0-Uzx" id="VQ0-hR-cfT"/>
+                <outlet property="moreContentButton" destination="zZQ-8F-Z4y" id="mjy-ey-78Z"/>
+            </connections>
+            <point key="canvasLocation" x="249" y="174"/>
         </tableViewCell>
     </objects>
     <resources>
