--- a/Acfun/Acfun/Classes/HomePage/View/HomeVedioCell.xib
+++ b/Acfun/Acfun/Classes/HomePage/View/HomeVedioCell.xib
@@ -21,8 +21,8 @@
                             <constraint firstAttribute="height" constant="90" id="APA-Qz-ANP"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="认真你就输了" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cVo-gB-v5Z">
-                        <rect key="frame" x="0.0" y="100" width="278" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="认真你就输了" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cVo-gB-v5Z">
+                        <rect key="frame" x="0.0" y="102" width="278" height="56"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
@@ -30,7 +30,9 @@
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             </view>
+            <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
+                <constraint firstAttribute="bottom" secondItem="cVo-gB-v5Z" secondAttribute="bottom" constant="10" id="1Gy-oj-WjI"/>
                 <constraint firstItem="e4u-OK-EPa" firstAttribute="top" secondItem="ZGW-cH-jAM" secondAttribute="top" id="2W4-YR-Phl"/>
                 <constraint firstItem="e4u-OK-EPa" firstAttribute="leading" secondItem="ZGW-cH-jAM" secondAttribute="leading" id="JCM-nB-PTa"/>
                 <constraint firstAttribute="trailing" secondItem="cVo-gB-v5Z" secondAttribute="trailing" id="fCh-ZI-Fac"/>
@@ -39,7 +41,7 @@
                 <constraint firstItem="cVo-gB-v5Z" firstAttribute="top" secondItem="e4u-OK-EPa" secondAttribute="bottom" constant="10" id="xKh-q4-sPJ"/>
             </constraints>
             <size key="customSize" width="278" height="166"/>
-            <point key="canvasLocation" x="232" y="213"/>
+            <point key="canvasLocation" x="240" y="126"/>
         </collectionViewCell>
     </objects>
     <resources>
